--- a/website/src/pages/v3/features/subscriptions.mdx
+++ b/website/src/pages/v3/features/subscriptions.mdx
@@ -16,7 +16,7 @@ You don't need any extra packages to use subscriptions.
   event streams must be distributed across all servers.
 </Callout>
 
-## Quick Start with **S**erver **S**ent **E**vents
+## Quick Start with Server Sent Events (SSE)
 
 Subscriptions can be added by extending your GraphQL schema with a `Subscription` type.
 
