--- a/website/src/pages/v3/features/context.mdx
+++ b/website/src/pages/v3/features/context.mdx
@@ -9,15 +9,17 @@ Within GraphQL Yoga, the context object is constructed for each incoming HTTP re
 
 By default, GraphQL Yoga provides the following values in the context object independently of your environment and setup:
 
-- `request` - [Fetch API `Request` object](https://developer.mozilla.org/en-US/docs/Web/API/Request) that represents the incoming HTTP request in platform-independent way. It can be useful for accessing headers for authenticatating a client
-- `query` - the `DocumentNode` that was parsed from the GraphQL query string sent by a client
-- `operationName` - the operation name selected from the incoming query sent by a client
-- `variables` - the variables that were defined in the query sent by a client
-- `extensions` - the extensions that were received from the client sent by a client
+- `request` - [Fetch API `Request` object](https://developer.mozilla.org/en-US/docs/Web/API/Request) that represents the incoming HTTP request in platform-independent way. It can be useful for accessing headers for authenticating a client
+- `res` - [Fetch API `Response` object](https://developer.mozilla.org/en-US/docs/Web/API/Response) that represents the outgoing HTTP response in platform-independent way.
+- `params` - Parameters of GraphQL Request
+  - `query` - the `DocumentNode` that was parsed from the GraphQL query string sent by a client
+  - `operationName` - the operation name selected from the incoming query sent by a client
+  - `variables` - the variables that were defined in the query sent by a client
+  - `extensions` - the extensions that were received from the client sent by a client
 
 ### Context Usage Example: Log Headers
 
-```ts
+```ts filename="Context Usage Log Headers" {14}
 import { createYoga, createSchema } from 'graphql-yoga'
 import { createServer } from 'http'
 
@@ -44,7 +46,7 @@ server.listen(4000, () => {
 })
 ```
 
-```sh
+```sh filename="Execute operation and see logs in terminal"
 curl -X POST http://localhost:4000/graphql \
   -H "content-type: application/json" \
   -H "x-foo: iliketurtles"
@@ -57,7 +59,7 @@ You can extend the existing context by providing a `context` property to the `cr
 
 ### Example: Object
 
-```ts
+```ts filename="Extending Context" {19}
 import { createYoga, createSchema } from 'graphql-yoga'
 import { createServer } from 'http'
 
@@ -90,7 +92,7 @@ Instead, you can also pass a function as the `context` property. The function wi
 
 ### Example: Function Returning an Object
 
-```ts
+```ts filename="Returning function for context" {20}
 import { createYoga, createSchema } from 'graphql-yoga'
 import { createServer } from 'http'
 
@@ -124,7 +126,7 @@ The function can either return an object or a Promise that resolves to an object
 
 ### Example: Function Returning a Promise
 
-```ts
+```ts filename="Returning promise for context creation" {17-19}
 import { createYoga, createSchema } from 'graphql-yoga'
 import { createServer } from 'http'
 
@@ -200,7 +202,7 @@ Since they limit the access to the underlying raw `ServerResponse` object, the r
 E.g. for **_Fastify_**, a [`Reply`](https://fastify.io/docs/latest/Reply) object is attached to the server context instead of the `Request` object, which is an intermediate framework-specific response format.
 Also, note the generic definition in `createServer` for correctly typing the server context.
 
-```ts
+```ts filename="Typing request for Fastify integration" {2-3}
 const yoga = createYoga<{
   req: FastifyRequest
   reply: FastifyReply
@@ -225,7 +227,7 @@ Besides, the initial context generated based on your setup, GraphQL Yoga also ac
 You can pass a factory function to `context` parameter of `createServer` configuration.
 That function will receive the combination of the standard initial context and the server's (if available), then the return value will be merged into that.
 
-```ts
+```ts filename="User context factory function" {5-9}
 import { createYoga } from 'graphql-yoga'
 import { createServer } from 'http'
 
